src/objects/Monthly_Pricing__c.object
<CustomObject>
    <description>Commodity price history</description>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Net__c</fullName>
        <description>Multiplies price by the metadata net adjustment value</description>
        <formula>CASE( TEXT(Pricing_Type__c),&apos;GAS&apos;,
$CustomMetadata.Production_Fee__mdt.Gas.Value__c,
$CustomMetadata.Production_Fee__mdt.Oil.Value__c)
*  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Multiplies price by the metadata net adjustment value</inlineHelpText>
        <label>Price (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Avg price</description>
        <inlineHelpText>Avg price</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OIL</fullName>
                </value>
                <value>
                    <fullName>GAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Monthly Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Pricing_Type__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PH-{0000000000}</displayFormat>
        <label>Pricing History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>